--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="text-center">
         <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com */-->
-        <small class="copyright">{{ site.data.data.footer }}</small>
+        <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=mU1GJmFv0dt8XoO_fWfbuZSUVS4uu3X1Sclq17oul0g&cl=ffffff&w=a"></script>
     </div><!--//container-->
 </footer><!--//footer-->
